khtml-filter: Ignore regexp with options as we do not support them.

BUG: 346338
FIXED-IN: 4.14.8